<resources>
    <string name="app_name">month_7_lesson_1</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="id">id</string>
    <string name="show_id">show id</string>
    <string name="id_item">\"id_Item= \"</string>
    <string name="cucumbers">cucumbers</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="enable">\"enable= \"</string>
    <string name="search">Search</string>
</resources>